--- a/PicObfer.vcxproj
+++ b/PicObfer.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{7fd778c9-8e72-4f11-91f0-89fd8c32b953}</ProjectGuid>
     <RootNamespace>PicObfer</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>PictureObfuscator</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,7 +140,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="PicObfer.cpp" />
+    <ClCompile Include="PictureObfuscator.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
